crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__strings-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"\\\"a \\\\u2212 b\\\";\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 13,
                    },
                },
                span: 0..13,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 12,
                            },
                        },
                        span: 0..12,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                    },
                                    span: 0..12,
                                    value: "a − b",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
