crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__strings-5.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"\\\"hello, \\\\\\\"world\\\\\\\"!\\\";\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 20,
                    },
                },
                span: 0..20,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 19,
                            },
                        },
                        span: 0..19,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 19,
                                        },
                                    },
                                    span: 0..19,
                                    value: "hello, \"world\"!",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
