crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__strings.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(r#\"\"\";\"#)"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 3,
                    },
                },
                span: 0..3,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 2,
                            },
                        },
                        span: 0..2,
                        kind: Lit(
                            Str(
                                Str {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 2,
                                        },
                                    },
                                    span: 0..2,
                                    value: "",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
